--- a/README
+++ b/README
@@ -4,7 +4,7 @@ instructions may be found in the INSTALL file.
 tinc is Copyright (C) 1998-2014 by:
 
 Ivo Timmermans,
-Guus Sliepen <guus@tinc-vpn.org>,
+Guus Sliepen <guus@meshlink.io>,
 and others.
 
 For a complete list of authors see the AUTHORS file.
